--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link href="style.css" type="text/css" rel="stylesheet" />
-        <script src="style.js"></script>
+        <link href="./home/style.css" type="text/css" rel="stylesheet" />
+        <script src="./home/style.js"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
         <link href="https://fonts.googleapis.com/css?family=Playfair+Display&display=swap" rel="stylesheet"> 
@@ -38,17 +38,17 @@
                     <button id="contact-button" type="button">Contact Us</button></div>
                 <div class="main">
                         <div class="logo">
-                   <img src="../images/Logo.png" alt="Pana Cloud Logo.png" width="100px" height="60px">
+                   <img src="./images/Logo.png" alt="Pana Cloud Logo.png" width="100px" height="60px">
                             </div>
                         <div class="navigation">
                                 <a href="./index.html">Home</a>
-                                <a href="../webpages/services.html">Services</a>
-                                <a href="../webpages/aboutus.html">About Us</a>
-                                <a href="../webpages/portfolio.html">Portfolio</a>
-                                <a href="../webpages/process.html">Process</a>
-                                <a href="../webpages/reviews.html">Reviews</a>
-                                <a href="../webpages/ourskills.html">Our Skills</a>
-                                <a href="../webpages/contact.html">Contact</a>
+                                <a href="./webpages/services.html">Services</a>
+                                <a href="./webpages/aboutus.html">About Us</a>
+                                <a href="./webpages/portfolio.html">Portfolio</a>
+                                <a href="./webpages/process.html">Process</a>
+                                <a href="./webpages/reviews.html">Reviews</a>
+                                <a href="./webpages/ourskills.html">Our Skills</a>
+                                <a href="./webpages/contact.html">Contact</a>
                                 </div>               
                     
                 </div>
@@ -76,35 +76,35 @@
                 </p>
             </div>
             <div class="advantages">
-                <img class="pic-advantage" src="../images/icons/advantage-icon/advantage-1.png" style="width: 100%; alt: icon-1;">
+                <img class="pic-advantage" src="./images/icons/advantage-icon/advantage-1.png" style="width: 100%; alt: icon-1;">
                 <h2 class="heading-advantage">Innovation</h2>
                 <p class="para-advantage">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Ducimus inventore impedit sed consequatur, cum sint temporibus sit suscipit velit
                 </p>         
             </div>
             <div class="advantages">
-                    <img class="pic-advantage" src="../images/icons/advantage-icon/advantage-2.png" style="width: 100%; alt: icon-2;">
+                    <img class="pic-advantage" src="./images/icons/advantage-icon/advantage-2.png" style="width: 100%; alt: icon-2;">
                     <h2 class="heading-advantage">Quality</h2>
                     <p class="para-advantage">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Ducimus inventore impedit sed consequatur, cum sint temporibus sit suscipit velit
                     </p>         
                 </div>
             <div class="advantages">
-                    <img class="pic-advantage" src="../images/icons/advantage-icon/advantage-3.png" style="width: 100%; alt: icon-3;">
+                    <img class="pic-advantage" src="./images/icons/advantage-icon/advantage-3.png" style="width: 100%; alt: icon-3;">
                     <h2 class="heading-advantage">Experience</h2>
                     <p class="para-advantage">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Ducimus inventore impedit sed consequatur, cum sint temporibus sit suscipit velit
                     </p>         
                 </div>
             <div class="advantages">
-                    <img class="pic-advantage" src="../images/icons/advantage-icon/advantage-4.png" style="width: 100%; alt: icon-4;">
+                    <img class="pic-advantage" src="./images/icons/advantage-icon/advantage-4.png" style="width: 100%; alt: icon-4;">
                     <h2 class="heading-advantage">Happy Client</h2>
                     <p class="para-advantage">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Ducimus inventore impedit sed consequatur, cum sint temporibus sit suscipit velit
                     </p>         
                 </div>
             <div class="advantages">
-                    <img class="pic-advantage" src="../images/icons/advantage-icon/advantage-5.png" style="width: 100%; alt: icon-5;">
+                    <img class="pic-advantage" src="./images/icons/advantage-icon/advantage-5.png" style="width: 100%; alt: icon-5;">
                     <h2 class="heading-advantage">Support</h2>
                     <p class="para-advantage">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Ducimus inventore impedit sed consequatur, cum sint temporibus sit suscipit velit
