--- a/webpages/services.html
+++ b/webpages/services.html
@@ -40,7 +40,7 @@
                    <img src="../images/Logo.png" alt="Pana Cloud Logo.png" width="100px" height="60px">
                             </div>
                         <div class="navigation">
-                                <a href="../home/index.html">Home</a>
+                            <a href="../index.html">Home</a>
                                 <a href="../webpages/services.html">Services</a>
                                 <a href="../webpages/aboutus.html">About Us</a>
                                 <a href="../webpages/portfolio.html">Portfolio</a>
